--- a/src/component/LoanGrid.css
+++ b/src/component/LoanGrid.css
@@ -2,13 +2,15 @@
     font-size: 1.5em;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 15px;
     background-color: rgb(122, 122, 122);
     align-items: center;
+    margin-top: 20px;
     margin-right: 20px;
     box-shadow: 0px 4px 11px -3px rgba(0,0,0,1);
   }
 
 .loan-grid-title {
+   margin-top: 5px;
    font-size: 24px;
 }
