--- a/src/component/NumberInput.css
+++ b/src/component/NumberInput.css
@@ -1,16 +1,16 @@
 .form-row {
   display: flex;
   justify-content: flex-end;
-  padding: .25em;
+  padding: 10px;
   width: 400px;
 }
 .form-row > label {
-  padding: .25em;
+  padding: 10px;
   flex: 1;
   font-size: 14px;
 }
 .form-row > input {
-  padding: .25em;
+  padding: 10px;
   text-align: right;
   font-size: 14px;
   width: 100px;
